@@ -127,7 +127,6 @@ ext/session
 
 ext/sockets
 -----------
-    * Implement IPv6
     * Review/Fix vectors
 
 ext/standard
