@@ -21,6 +21,7 @@ PHP                                                                        NEWS
 - Changed array_search() to accept also objects as a needle. (Moriyoshi)
 - Changed ext/mcrypt to require libmcrypt version 2.5.6 or greater. (Derick)
 - Changed uniqid() parameters to be optional and allow any prefix length. (Marcus)
+- Added IPv6 support to ext/sockets. (Sara)
 - Added context options to http_fopen_wrapper 'method', 'header', 'content'. (Sara)
 - Added domdocument->create_document_fragment() and documentfragment->open_mem() 
   methods to domxml. (Rob Richards, Chregu)
